@@ -23,6 +23,7 @@ NEWS
   * [core] recognize more http methods to forward to backends (fixes #2346)
   * [ssl] use DH only if openssl supports it (fixes #2479)
   * [network] use constants available at compile time for maximum number of chunks for writev instead of calling sysconf (fixes #2470)
+  * [ssl] Fix $HTTP["scheme"] conditional, could be "http" for ssl connections if the ssl $SERVER["socket"] conditional was nested (fixes #2501)
 
 - 1.4.32 - 2012-11-21
   * Code cleanup with clang/sparse (fixes #2437, thx kibi)
